Updates from Jackie's mockups

--- a/Views/Home/models.cshtml
+++ b/Views/Home/models.cshtml
@@ -33,8 +33,9 @@
                             </a>
                             <a href="">
                                 <li class="list-inline-item es-hybrid">
-                                   <span>R730 500</span>
+                                    <span>R730 500</span>
                                     <span>ES</span>
+                                    <span>Hybrid</span>
                                 </li>
                             </a>
                             <a href="">
@@ -99,6 +100,7 @@
                                 <li class="list-inline-item rx-hybrid">
                                     <span>R806 900</span>
                                     <span>RX</span>
+                                    <span>Hybrid</span>
                                 </li>
                             </a>
                             <a href="">
