--- a/Views/Home/pre-owned-detail.cshtml
+++ b/Views/Home/pre-owned-detail.cshtml
@@ -76,8 +76,10 @@
                 @Html.Partial("pre-owned-contact")
             </div>
         </div>
-        <div class="mx-auto mt-4" style="">
-            <div id="map"></div>     
+        
+        <div class="mx-auto mt-4 details-map">
+<!--            <div class="gradient-blend"></div>-->
+            <div id="map"></div>    
         </div>
     </section>
 
