--- a/Views/Home/pre-owned.cshtml
+++ b/Views/Home/pre-owned.cshtml
@@ -23,7 +23,7 @@
             <div class="row mt-4">
                 <div class="col">
                     <div class="results-heading">
-                        <h1 class="mb-0 light pr-2">USED<span class="text-white bg-gray-6 p-3">LEXUS RX MODELS</span></h1>
+                        <h1>USED<span>LEXUS RX MODELS</span></h1>
                     </div>
                     <span class="d-block py-4"><b>35</b> Vehicles matching your search </span>
                 </div>
