--- a/Views/Shared/pre-owned-contact.cshtml
+++ b/Views/Shared/pre-owned-contact.cshtml
@@ -1,6 +1,6 @@
 <div class="dealer-name">Lexus Midrand</div>
 <div class="dealer-num">087 233 3235</div>
-<form class="p-5">     
+<form class="px-5">     
     <div class="form-group req">
         <label for="name2" class="mb-0">Name <span>*</span></label>
         <div class="invalid-feedback">Required</div>
@@ -32,5 +32,5 @@
         Allow Lexus to contact me
     </label>
 
-    <button type="submit" class="btn btn-secondary btn-lg btn-block mt-4">Email Dealer</button>
+    <button type="submit" class="btn btn-secondary btn-lg btn-block my-4 pb-4">Email Dealer</button>
 </form>
