--- a/wwwroot/scss/ark/buttons.scss
+++ b/wwwroot/scss/ark/buttons.scss
@@ -4,9 +4,14 @@
 	line-height: 55px;
 	height: 55px;
 	padding: 0 45px;
-//	border: none;
+    border-width: 2px;
+	border: none;
 	font-weight: 700;
 	font-family: $headings-font-family;
 	text-transform: uppercase;
 	font-size: 1rem;
+}
+
+.btn-outline-light { 
+   border:2px solid white;
 }
