--- a/wwwroot/scss/pages/pre-owned.scss
+++ b/wwwroot/scss/pages/pre-owned.scss
@@ -28,22 +28,48 @@ $size: 45px;
     .results-column {
         margin-left: 0;
         @include media-breakpoint-up(md) {
-           margin-left:300px;
+            margin-left:300px;
         } 
         
-        .results-heading { 
+        .results-heading {
+            
+            h1 { 
+                font-family: "nobellexuslight";
+                white-space: nowrap;
+                @extend .text-truncate;
+                @include media-breakpoint-down(md) {
+                    font-size: 1.7em;
+                } 
+            }
             span {
-                @extend .edge--skew;
+                position: relative;
+                margin-left:20px;
+                display: inline-block;
+                color:white;
+                padding:10px;
+                z-index: 200;
+                font-weight: bold;
+                
                 &:before { 
-                    content:'';
+                    content: '';
+                    background: $gray-500;
+                    transform: skewX(-20deg);
+                    z-index: -1;
+                    position: absolute;
+                    width: 110%;
+                    height: 55px;
                     display: inline-block;
-                   transform: skewX(-20deg);
+                    top: 0;
+                    left: -11px;
+                    padding-left: 10px;
+                }
+            
+                @include media-breakpoint-down(md) {
+                    h1 { 
+                        font-size:1em;
+                    }
                 }
             }
-            
-            @include media-breakpoint-down(md) {
-                font-size:1em;
-            } 
         }
     
     .result-listing {
@@ -208,13 +234,14 @@ $size: 45px;
 // FACETS
 .facets {
     position: fixed;
-    top:4.5rem;
-    left:0;
-    width:300px;
-    height:100%;
+    top: 4.5rem;
+    left: 0;
+    width: 240px;
+    height: 714px;
+    margin: 30px;
     overflow-y: scroll;
-    box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
-    background-image: url('/images/white_leather.png');
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    background: white;
     
     p { 
         @extend .lead;
@@ -254,19 +281,28 @@ $size: 45px;
             & a {
                 color:black;
                 margin:0;
+                text-decoration: none;
             }
             &.active {
-                background: $gray-200;
                 font-weight: bold;
-                border-radius: 0;
-                
-                box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+                margin-left:20px;
                 a {
                     color:black;
+                    &:before { 
+                        content:'';
+                        position: absolute;
+                        top: 5px;
+                        left: 26px;
+                        width: 22px;
+                        height: 46px;
+                        background-repeat: no-repeat;
+                        background-image: url(/images/black-chevron.png);
+                    }
                 }
                 
                 &:hover { 
-                    background: $gray-200;
+                    background: white;
+                    margin-left:20px;
                 }
                 
                 .badge {
@@ -296,8 +332,13 @@ $size: 45px;
 //SEARCH DETAILS
 .result-details { 
     background:#d9d8d9;
-    
+    background: rgb(151,151,151); 
+    background: -moz-linear-gradient(top, rgba(151,151,151,1) 26%, rgba(217,216,217,1) 38%); 
+    background: -webkit-linear-gradient(top, rgba(151,151,151,1) 26%,rgba(217,216,217,1) 38%); 
+    background: linear-gradient(to bottom, rgba(151,151,151,1) 26%,rgba(217,216,217,1) 38%); 
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#979797', endColorstr='#d9d8d9',GradientType=0 ); 
     margin-right:350px;
+    
         @include media-breakpoint-down(md) {
             margin-right:0;
         } 
@@ -313,8 +354,26 @@ $size: 45px;
         max-width: 640px;
         border:2px solid black;
         border-radius: 3px;
-        overflow: hidden;
+        overflow: hidden; 
     }
+    
+    .details-map { 
+        position: relative;
+        width:100%;
+       
+        .gradient-blend { 
+            background: -moz-linear-gradient(top, rgba(217,216,217,1) 0%, rgba(229,229,229,0.85) 15%, rgba(229,229,229,0) 100%); 
+            background: -webkit-linear-gradient(top, rgba(217,216,217,1) 0%,rgba(229,229,229,0.85) 15%,rgba(229,229,229,0) 100%); 
+            background: linear-gradient(to bottom, rgba(217,216,217,1) 0%,rgba(229,229,229,0.85) 15%,rgba(229,229,229,0) 100%); 
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9d8d9', endColorstr='#00e5e5e5',GradientType=0 );  
+            width: 100%;
+            display: block;
+            height: 175px;
+            position: absolute;
+            z-index: 10;
+        }
+    }
+    
     
     .thumbnail-img { 
         img {
@@ -327,6 +386,9 @@ $size: 45px;
         }
     
     }
+    .card {
+        border:0;
+    }
     .card-header {
         text-transform: uppercase; 
         position: relative;
@@ -336,21 +398,13 @@ $size: 45px;
         h1 {
             @extend .text-truncate;
             margin-right: 120px;
-        }
-        
-        @include media-breakpoint-down(md) {
-            font-size:0.8em;
-            h1 {
-                margin-right: 90px;
-            }
-            
-        } 
-        
-        h1 {
-            font-size: 2.5em; 
             margin-bottom: 0;
+            @include media-breakpoint-down(md) {
+                font-size:1.5em;
+                margin-bottom: 0;
+            } 
         }
-    
+
         span {
                 background: white;
                 z-index: 1;
@@ -361,7 +415,11 @@ $size: 45px;
                 font-weight: bold;
                 color: black;
                 padding: 0px 20px;
-                padding: 0px 20px;
+            
+                @include media-breakpoint-down(md) {
+                    font-size:1.8em;
+                    top: 10px;
+                } 
   
             &:before {
                 background: inherit;
@@ -376,8 +434,9 @@ $size: 45px;
             }
 
             &:before {
-                top: -1px;
-                transform: skewX(-20deg);
+                top: 0px;
+                width:99%;
+                transform: skewX(-22deg);
                 transform-origin: 100% 0;
               }
         }
@@ -478,12 +537,24 @@ $size: 45px;
                         content:'Transmission';                     
                     }
                 }
+                @include media-breakpoint-down(md) {
+                    min-width: 60px;
+                    p {
+                        font-size:0.9em;
+                    }
+                    span {
+                        font-size: 0.8em;
+                    }
+                } 
             }
             
             & .list-inline-item:nth-child(n + 2):not(:nth-child(n + 4)) {
                 border-right:2px dotted $gray-600;
                 margin:3px;
                 border-radius: 0;
+                @include media-breakpoint-down(md) {
+                    border-color:$gray-500;
+                } 
             }
             
             & .list-inline-item:first-child { 
@@ -500,19 +571,23 @@ $size: 45px;
         text-transform: uppercase;
         font-size: 0.8em;
         margin: -5px -15px;
-        a {color:grey;}
+        a {
+            color:$gray-400;
+        }
         .active {color:white;}
     }
     
 
 
     //CUSTOM CAROUSEL
-    .carousel-control-prev {
-        left: -70px;
-    }
-    .carousel-control-next {
-        right: -70px;  
-    }
+    @include media-breakpoint-up(lg) {
+        .carousel-control-prev {
+            left: -70px;
+        }
+        .carousel-control-next {
+            right: -70px;  
+        }
+    } 
     
     .carousel-control-next-icon {
         background-image: url('../images/right-arrow.png');
@@ -565,9 +640,9 @@ $size: 45px;
     }
 }
 .result-contact-sm {
+    
     background: $gray-800;
     color:white;
-    border: 1px solid black;
     
     .dealer-name { 
         background: $gray-800;
