--- a/wwwroot/scss/theme.scss
+++ b/wwwroot/scss/theme.scss
@@ -23,16 +23,16 @@
 
 //FONT SIZES FOR MOBILE
 
-@include media-breakpoint-down(sm) { 
-   h1 { font-size: $font-size-base / 0.4 !important; }
-   h2 { font-size: $font-size-base  / 0.4 !important; }
-   h3 { font-size: $font-size-base / 0.4 !important; }  
-   h4 { font-size: $font-size-base / 0.4 !important; }  
-   .display-1 { font-size: $font-size-base / 0.4  !important; }  
-   .display-2 { font-size: $font-size-base / 0.4  !important; }  
-   .display-3 { font-size: $font-size-base / 0.4 !important; }  
-   .display-4 { font-size: $font-size-base / 0.4 !important; }  
-}
+//@include media-breakpoint-down(sm) { 
+//   h1 { font-size: $font-size-base / 0.4 !important; }
+//   h2 { font-size: $font-size-base  / 0.4 !important; }
+//   h3 { font-size: $font-size-base / 0.4 !important; }  
+//   h4 { font-size: $font-size-base / 0.4 !important; }  
+//   .display-1 { font-size: $font-size-base / 0.4  !important; }  
+//   .display-2 { font-size: $font-size-base / 0.4  !important; }  
+//   .display-3 { font-size: $font-size-base / 0.4 !important; }  
+//   .display-4 { font-size: $font-size-base / 0.4 !important; }  
+//}
 
 //// NAVBAR
 #main-nav.navbar {
@@ -71,7 +71,7 @@
             }
             
             &:hover { background: transparent;}
-
+            & span { padding: 0 4px;}
             &.active {
                 span {
                     display: flex;
@@ -108,7 +108,6 @@
         }
     }
 }
-
 .bidvest-logo { 
     position: absolute;
     top: 0;
