--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,9 +6,9 @@
        <div class="container">
             <div class="row py-5">
                 <div class="col-12">
-                    <img src="/images/bidvest-logo-white.png" alt="" class="my-4">
+                    <img src="/images/bidvest-logo-white.png" alt="Bidvest McCarthy Logo" class="my-4">
                     <p class="h5 text-white mb-5 light">It is the old motor industry adage that people buy from people, but these days we know that people only buy from the BEST people and there is no better than at McCarthy Toyota Midrand. For all your motor needs; from Purchasing your Brand New Toyota, to servicing it and using Toyota genuine Parts, to our wide range of Pre-Owned vehicles you can be guaranteed that you will be dealing with the right people.</p>
-                    <a href="/dealers" class="btn btn-secondary text-uppercase text-center-xs d-block-xs mx-auto">View Bidvest Dealerships</a>
+                    <a href="/dealers" class="btn btn-secondary text-uppercase text-center-xs d-block-xs mx-auto">View Bidvest Dealership</a>
                 </div>
             </div>
         </div>
@@ -34,12 +34,12 @@
             </div>
         </div>
     </section>
-    <section class="car-specials my-5">
+    <section class="car-specials mt-6">
         <div class="container">
-            <div class="row my-4">
+            <div class="row mt-5">
                 <div class="col">
                     <div class="display-4">Latest Specials</div>
-                    <div class="h5 light text-uppercase" id="showdate"></div>
+                    <div class="h5 light" id="showdate"></div>
                 </div>
             </div>
             @Html.Partial("specials-listings")
@@ -135,7 +135,7 @@
                     <div class="row my-3">
                         <div class="col">
                             <a href="javascript:void(0)" class="btn btn-outline-light mb-3 d-block-xs mx-md-4">Find out more</a>
-                            <p class="p font-weight-bold small text-center-xs mb-4 mx-lg-4">Get 1 Year free membership with every Lexus purchase</p>
+                            <span class="h6 d-block font-weight-bold text-center-xs mb-4 mx-lg-4">Get 1 Year free membership with every Lexus purchase</span>
                         </div>
                     </div>    
                 </div>        
