--- a/Views/Home/dealer-detail.cshtml
+++ b/Views/Home/dealer-detail.cshtml
@@ -46,7 +46,7 @@
                     <span></span>
                 </div>
                 <div class="col">
-                    <h2 class="display-4">Used Cars</h2>
+                    <h2 class="display-4">Pre-Owned Cars</h2>
                     <span></span>
                 </div>
             </div>
