--- a/Views/Home/models.cshtml
+++ b/Views/Home/models.cshtml
@@ -20,7 +20,7 @@
                     <div class="car-specs-model mx-auto text-center d-none d-md-block">
                         <ul class="list-inline">
                             <a href="/model-name">
-                                <li class="list-inline-item is">
+                                <li class="list-inline-item is" id="is-model">
                                     <span>R601 900</span>
                                     <span>IS</span>
                                 </li>
@@ -58,7 +58,7 @@
                             </a>
                         </ul>
                     </div>
-                    <div class="car-model-pic mx-auto">
+                    <div class="car-model-pic mx-auto" id="is">
                         <img src="/images/IS-1.png" alt="" onclick="location.href='/model-name';"><span><i></i>IS</span><span>R609 900</span>
                         <img src="/images/IS-2.png" alt="" onclick="location.href='/model-name';"><span><i></i>ES</span><span>R559 700</span>  
                         <img src="/images/IS-3.png" alt="" onclick="location.href='/model-name';"><span><i></i>ES</span><span>R670 700</span> 
