--- a/Views/Home/pre-owned.cshtml
+++ b/Views/Home/pre-owned.cshtml
@@ -8,7 +8,7 @@
         <li class="breadcrumb-item">
             <a href="#">Parent</a>
         </li>
-        <li class="breadcrumb-item active">USED LEXUS RX MODELS</li>
+        <li class="breadcrumb-item active text-upercase">Pre-Owned LEXUS RX MODELS</li>
     </ul>
 
     <div class="d-block d-md-none mt-0 refine-search">
@@ -23,7 +23,7 @@
             <div class="row mt-4">
                 <div class="col">
                     <div class="results-heading">
-                        <h1>USED<span>LEXUS RX MODELS</span></h1>
+                        <h1 class="text-uppercase">Pre-Owned<span>LEXUS RX MODELS</span></h1>
                     </div>
                     <span class="d-block py-4"><b>35</b> Vehicles matching your search </span>
                 </div>
