--- a/Views/Home/specials.cshtml
+++ b/Views/Home/specials.cshtml
@@ -58,7 +58,7 @@
                                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                                 <a class="dropdown-item" href="#">New <span>(17)</span></a>
                                                 <a class="dropdown-item" href="#">Demo <span>(2)</span></a>
-                                                <a class="dropdown-item" href="#">Used <span>(1)</span></a>
+                                                <a class="dropdown-item" href="#">Pre-Owned <span>(1)</span></a>
                                             </div>
                                         </div>
                                     </div>
