--- a/Views/Shared/footer.cshtml
+++ b/Views/Shared/footer.cshtml
@@ -21,7 +21,7 @@
                     </div>
                     <div class="col-4 col-lg-3">
                         <ul class="list-unstyled">
-                            <li><a href="" class="font-weight-bold">Used</a></li>
+                            <li><a href="" class="font-weight-bold">Pre-Owned</a></li>
                             <li><a href="">Sedans</a></li>
                             <li><a href="">SUV's</a></li>
                             <li><a href="">Coupses</a></li>
