--- a/Views/Shared/navigation.cshtml
+++ b/Views/Shared/navigation.cshtml
@@ -1,7 +1,10 @@
 ﻿<nav id="main-nav" class="navbar navbar-expand-lg fixed-top navbar-dark nav-padding">
     <div class="container-fluid">
         <img src="~/images/bidvest-logo.png" alt="" class="bidvest-logo">
-        <div class="mask pseudo"><a class="navbar-brand" href="/" alt="Lexus"><img src="~/images/lexus-logo-2.png" /></a></div>
+        <div class="">
+<!--        <div class="mask pseudo">-->
+        <a class="navbar-brand" href="/" alt="Lexus"><img src="~/images/lexus-logo-2.png" /></a>
+        </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -11,8 +14,8 @@
 <!--		  <li class="nav-item"><a class="nav-link" href="/components"><span>Components</span></a></li>-->
 		      <li class="nav-item"><a class="nav-link" href="/"><span>Home</span></a></li>
 		      <li class="nav-item"><a class="nav-link" href="/specials"><span>Specials</span></a></li>
-		      <li class="nav-item"><a class="nav-link" href="/models"><span>New Cars</span></a></li>
-		      <li class="nav-item"><a class="nav-link" href="/pre-owned"><span><span>Used</span></span></a></li>
+		      <li class="nav-item"><a class="nav-link" href="/models"><span>Models</span></a></li>
+		      <li class="nav-item"><a class="nav-link" href="/pre-owned"><span><span>Pre-Owned</span></span></a></li>
 		      <li class="nav-item"><a class="nav-link" href="pre-owned"><span>Demo</span></a></li>
 		      <li class="nav-item"><a class="nav-link" href="/service"><span>Service</span></a></li>
 		      <li class="nav-item"><a class="nav-link" href="/Dealers"><span>Dealers</span></a></li>
