--- a/Views/Shared/specials-facets.cshtml
+++ b/Views/Shared/specials-facets.cshtml
@@ -24,7 +24,7 @@
             <span>2</span>
         </div>
         <div>
-            <a href="/cars/lexus/convertible/">Used</a>
+            <a href="/cars/lexus/convertible/">Pre-Owned</a>
             <span>1</span>
         </div>
     </div>
